<resources>
    <string name="app_name">Active Windows</string>
    <string name="yellow">yellow</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="azul">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="rosa">Pink</string>
    <string name="activate_windows">Activate Windows</string>
    <string name="violeta">Violet</string>


</resources>